--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>your code goes here</h1>
+    <main>
+      
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
