--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <main> 
-
+      <h1>
+        counter
+      </h1>
     </main>
     <!-- javascript -->
     <script src="app.js"></script>
