--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>
         counter
       </h1>
+      <span id="value">0</span>
     </main>
     <!-- javascript -->
     <script src="app.js"></script>
