--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   </head>
   <body>
     <main> 
-      <h1>
-        counter
-      </h1>
-      <span id="value">0</span>
-    </main>
-    <!-- javascript -->
+      <div class="container">
+
+        <h1>
+          counter
+        </h1>
+        <span id="value">0</span>
+      </div>
+      </main>
+      <!-- javascript -->
     <script src="app.js"></script>
   </body>
 </html>
