--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           counter
         </h1>
         <span id="value">0</span>
+        <div class="button-container">
+          
+        </div>
       </div>
       </main>
       <!-- javascript -->
