--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </h1>
         <span id="value">0</span>
         <div class="button-container">
-          <button class="btn"></button>
+          <button class="btn decrease"></button>
         </div>
       </div>
       </main>
