--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <span id="value">0</span>
         <div class="button-container">
           <button class="btn decrease">decrease</button>
-          <button class="btn reset">decrease</button>
-          <button class="btn increase">decrease</button>
+          <button class="btn reset">reset</button>
+          <button class="btn increase">increase</button>
         </div>
       </div>
       </main>
